migrate to java 11, refactoring, provide README.md